--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ section {
 
 .container {
   padding: 50px 0;
+  width: 100%;
 }
 
 .row {
@@ -277,4 +278,40 @@ nav {
 
 .project__description--para {
   margin: 16px 0;
+}
+
+/* 
+
+  FOOTER 
+
+*/
+
+footer {
+  background-color: #242424;
+  display: flex;
+  padding: 6% 0;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo--img {
+  height: 70px;
+  width: auto;
+}
+
+.footer__social--list {
+  width: 100%;
+  max-width: 480px;
+  display: flex;
+  justify-content: space-around;
+  margin: 28px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+  color: white;
 }
