--- a/style.css
+++ b/style.css
@@ -60,7 +60,34 @@ section {
 }
 
 .yellow {
-  color: #f06449 !important;
+  color: #f0d149 !important;
+}
+
+.link__hover-effect {
+  position: relative;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  height: 3px;
+  width: 0;
+  right: 0;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+  background-color: white;
+}
+
+.link__hover-effect--black:after {
+  background-color: black;
+}
+
+.link__hover-effect:hover:after {
+  left: 0;
+  width: 100%;
 }
 
 /* 
@@ -95,7 +122,7 @@ section {
 }
 
 .social__link {
-  background-color: #f06449;
+  background-color: #f0d149;
   color: white;
   padding: 6px;
   width: 32px;
