--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ button {
 
 section {
   background-color: rgb(245, 245, 245);
+  transition: all 300ms ease;
 }
 
 .input,
@@ -118,7 +119,11 @@ label {
 }
 
 .link__hover-effect--black:after {
-  background-color: black;
+  background-color: #242424;
+}
+
+.link__hover-effect--yellow:after {
+  background-color: #f0d149;
 }
 
 .link__hover-effect:hover:after {
@@ -128,18 +133,68 @@ label {
 
 nav,
 .scroll,
-.header {
+.header,
+.container {
   opacity: 1;
   visibility: visible;
-  transition: all 600ms 800ms;
+  transition: all 1000ms 500ms;
 }
 
 .modal--open nav,
-.modal--ope .scroll,
-.modal--ope .header {
+.modal--open .scroll,
+.modal--open .header,
+.modal--open .container {
   opacity: 0;
   visibility: hidden;
   transition: all 400ms;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para {
+  color: white;
+}
+
+.dark-theme section {
+  background-color: #242424;
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+}
+
+.dark-theme footer,
+.dark-theme .link__hover-effect--black:after {
+  background-color: white;
+}
+
+.dark-theme .footer__social--link,
+.dark-theme .footer__copyright {
+  color: #242424;
+}
+
+.dark-theme .footer__logo--img {
+  filter: invert();
+}
+
+.dark-theme .link__hover-effect--white:after {
+  background-color: #242424;
+}
+
+.dark-theme .scroll__icon:after {
+  background-color: #f0d149;
+}
+
+.dark-theme .mail__btn {
+  background-color: white;
+  color: #242424;
 }
 
 /* 
@@ -177,9 +232,9 @@ nav,
   background-color: #f0d149;
   color: white;
   padding: 6px;
-  width: 32px;
-  height: 32px;
-  font-size: 14px;
+  width: 48px;
+  height: 48px;
+  font-size: 24px;
   margin-right: 12px;
   display: flex;
   justify-content: center;
@@ -200,6 +255,10 @@ nav,
   right: 40px;
   z-index: 100;
   box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.28);
+}
+
+.mail__btn:hover {
+  color: #f0d149;
 }
 
 .scroll {
@@ -439,6 +498,10 @@ nav {
   z-index: 100;
 }
 
+.modal__exit:hover {
+  color: #f0d149;
+}
+
 .form__item {
   margin-bottom: 20px;
 }
@@ -539,8 +602,14 @@ nav {
 
 .project__description--link {
   color: white;
-  font-size: 20px;
+  font-size: 24px;
   margin-right: 16px;
+  transition: all 300ms ease;
+}
+
+.project__description--link:hover {
+  color: #f0d149;
+  cursor: pointer;
 }
 
 .project__description--para {
@@ -556,7 +625,7 @@ nav {
 footer {
   background-color: #242424;
   display: flex;
-  padding: 6% 0;
+  padding: 3% 0;
 }
 
 .footer__row {
