--- a/style.css
+++ b/style.css
@@ -65,8 +65,10 @@ label {
 }
 
 .container {
+  position: relative;
   padding: 50px 0;
   width: 100%;
+  z-index: 10;
 }
 
 .row {
@@ -132,6 +134,7 @@ label {
 }
 
 nav,
+.nav__background,
 .scroll,
 .header,
 .container {
@@ -141,6 +144,7 @@ nav,
 }
 
 .modal--open nav,
+.modal--open .nav__background,
 .modal--open .scroll,
 .modal--open .header,
 .modal--open .container {
@@ -158,6 +162,7 @@ nav,
   color: white;
 }
 
+.dark-theme .nav__background,
 .dark-theme section {
   background-color: #242424;
 }
@@ -197,6 +202,10 @@ nav,
   color: #242424;
 }
 
+.dark-theme .shape {
+  filter: sepia();
+}
+
 /* 
 
   LANDING PAGE 
@@ -215,6 +224,7 @@ nav,
   width: 100%;
   max-width: 1000px;
   padding: 0 30px;
+  z-index: 10;
 }
 
 .header__para {
@@ -303,15 +313,28 @@ nav,
 
 */
 
+.nav__background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-color: rgb(245, 245, 245);
+  z-index: 99;
+}
+
 nav {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  width: 100%;
   height: 100px;
+  padding: 0 20px;
+  z-index: 100;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 #personal-logo {
@@ -623,6 +646,7 @@ nav {
 */
 
 footer {
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 3% 0;
@@ -661,7 +685,7 @@ footer {
 .shape {
   position: fixed;
   z-index: 0;
-  filter: sepia();
+  filter: grayscale();
 }
 
 .shape--0 {
@@ -707,4 +731,102 @@ footer {
 .shape--8 {
   top: 80vh;
   left: 80vw;
+}
+
+/* 
+
+  Small Phones, Tablets, Large Smart Phones
+
+*/
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 80px;
+  }
+
+  .header__para {
+    font-size: 20px;
+  }
+
+  .social__link {
+    width: 36px;
+    height: 36px;
+    font-size: 18px;
+  }
+
+  .modal {
+    top: 0;
+    left: 0;
+    transform: none;
+    height: auto;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+
+  .modal__half {
+    width: 100%;
+  }
+
+  .project__description {
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+/* 
+
+  Small Phones
+
+*/
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 52px;
+  }
+
+  .header__para {
+    font-size: 18px;
+  }
+
+  .social__link {
+    width: 24px;
+    height: 24px;
+    font-size: 12px;
+  }
+
+  .nav__link:first-child {
+    display: none;
+  }
+
+  .modal__half {
+    padding: 40px;
+  }
+
+  .project__description--para {
+    display: none;
+  }
+
+  .project__description {
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .project__description--title {
+    font-size: 20px !important;
+  }
+
+  .project__description--sub-title {
+    font-size: 12px !important;
+    margin-bottom: 8px;
+  }
+
+  .project__description--link {
+    font-size: 16px;
+    margin-right: 8px;
+  }
 }
