--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 li {
   list-style-type: none;
 }
@@ -320,6 +324,7 @@ nav,
   width: 100%;
   height: 100px;
   background-color: rgb(245, 245, 245);
+  transition: all 300ms;
   z-index: 99;
 }
 
@@ -560,6 +565,7 @@ nav {
 .section__title {
   text-align: center;
   font-size: 48px;
+  margin-top: 100px;
   margin-bottom: 60px;
 }
 
