--- a/style.css
+++ b/style.css
@@ -96,10 +96,29 @@ label {
 }
 
 .title {
-  font-size: 120px;
+  font-size: 100px;
   margin-bottom: 12px;
   text-align: left;
   line-height: 1;
+}
+
+.title .wave {
+  display: inline-block;
+}
+
+.title .wave:hover {
+  cursor: default;
+  animation: wave-animation 500ms ease-in-out;
+}
+
+@keyframes wave-animation {
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(60deg);
+  }
 }
 
 .yellow {
@@ -163,16 +182,15 @@ nav,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-adjust,
 .dark-theme .header__para {
-  color: white;
+  color: rgb(245, 245, 245);
 }
 
-.dark-theme .nav__background,
+.dark-theme .nav__background {
+  filter: drop-shadow(0.5px 0.5px 0 #242424);
+}
+
 .dark-theme section {
   background-color: #242424;
-}
-
-.dark-theme #personal-logo {
-  filter: none;
 }
 
 .dark-theme .scroll__icon {
@@ -189,8 +207,12 @@ nav,
   color: #242424;
 }
 
+.dark-theme #personal-logo {
+  filter: invert(1);
+}
+
 .dark-theme .footer__logo--img {
-  filter: invert();
+  filter: grayscale(0);
 }
 
 .dark-theme .link__hover-effect--white:after {
@@ -226,23 +248,49 @@ nav,
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 1000px;
+  max-width: 1100px;
   padding: 0 30px;
   z-index: 10;
-}
-
-.header__para {
-  font-size: 24px;
-  line-height: 2;
-  max-width: 450px;
-}
-
-.social__list {
-  margin-top: 16px;
   display: flex;
 }
 
-.social__link {
+.header__left {
+  display: flex;
+  flex: 1.3;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.header__left .title {
+  animation: fade-up 650ms 400ms backwards;
+}
+
+.header__left .header__para {
+  font-size: 24px;
+  line-height: 2;
+  max-width: 450px;
+  animation: fade-up 650ms 600ms backwards;
+}
+
+.header__left .social__list {
+  margin-top: 16px;
+  display: flex;
+  animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.header__left .social__link {
   background-color: #f0d149;
   color: white;
   padding: 6px;
@@ -254,6 +302,36 @@ nav,
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+}
+
+.header__right {
+  display: flex;
+  flex: 0.7;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__right .profile--img {
+  width: 100%;
+  max-width: 450px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8%;
+  transition: all 300ms ease-in-out;
+  box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.2);
+  animation: profile-animation 800ms 200ms backwards;
+}
+
+@keyframes profile-animation {
+  0% {
+    transform: scale(0);
+  }
+  80% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .mail__btn {
@@ -323,7 +401,9 @@ nav,
   left: 0;
   width: 100%;
   height: 100px;
-  background-color: rgb(245, 245, 245);
+  background-color: transparent;
+  backdrop-filter: blur(4px);
+  filter: drop-shadow(0.5px 0.5px 0 rgb(245, 245, 245));
   transition: all 300ms;
   z-index: 99;
 }
@@ -343,9 +423,7 @@ nav {
 }
 
 #personal-logo {
-  width: 100px;
-  height: 62.8px;
-  filter: invert(1);
+  width: 50%;
 }
 
 .nav__link {
@@ -665,8 +743,9 @@ footer {
 }
 
 .footer__logo--img {
-  height: 70px;
+  height: 150px;
   width: auto;
+  filter: invert(1);
 }
 
 .footer__social--list {
@@ -750,6 +829,14 @@ footer {
     font-size: 80px;
   }
 
+  .header {
+    flex-direction: column;
+  }
+
+  .profile--img {
+    display: none;
+  }
+
   .header__para {
     font-size: 20px;
   }
@@ -778,6 +865,7 @@ footer {
     left: 0;
     padding: 0;
     width: 100%;
+    max-width: 100%;
     text-align: center;
   }
 }
