--- a/style.css
+++ b/style.css
@@ -36,31 +36,36 @@ section {
 .input,
 textarea {
   width: 100%;
-  background-color: #242424;
-  color: white;
+  background-color: rgb(245, 245, 245);
   outline: none;
-  border: 1px solid #c0c4cc;
+  border: 1px solid #242424;
   border-top: none;
   border-left: none;
   border-right: none;
   height: 40px;
-  transition: all 300ms ease;
+  transition: all 100ms ease;
 }
 
 textarea {
   resize: vertical;
-  height: 100px;
+  height: 200px;
   margin-top: 6px;
 }
 
 input:hover,
 textarea:hover {
-  border-color: #dedfe6;
+  border: 1.5px solid #242424;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 input:focus,
 textarea:focus {
-  border-color: #f0d149;
+  border: 1.5px solid #f0d149;
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
 
 label {
@@ -85,6 +90,7 @@ label {
 .click {
   cursor: pointer;
   transition: all 300ms ease;
+  display: inline-block;
 }
 
 .click:hover {
@@ -488,8 +494,9 @@ nav {
 }
 
 .modal__about {
-  background-color: rgb(245, 245, 245);
+  background-color: #242424;
   transform: translateX(-110%);
+  color: white;
 }
 
 .modal__languages {
@@ -528,8 +535,7 @@ nav {
 }
 
 .modal__contact {
-  background-color: #242424;
-  color: white;
+  background-color: rgb(245, 245, 245);
   transform: translateX(110%);
 }
 
@@ -560,7 +566,7 @@ nav {
 }
 
 .modal__overlay--loading {
-  background-color: #242424;
+  background-color: rgb(245, 245, 245);
   font-size: 80px;
 }
 
@@ -599,7 +605,7 @@ nav {
   position: absolute;
   top: 30px;
   right: 40px;
-  color: white;
+  color: #242424;
   font-size: 36px;
   z-index: 100;
 }
@@ -613,8 +619,8 @@ nav {
 }
 
 .form__submit {
-  background-color: #f0d149;
-  border: 2px solid #f0d149;
+  background-color: #242424;
+  border: 2px solid #242424;
   color: white;
   font-size: 20px;
   font-weight: 700;
@@ -625,13 +631,13 @@ nav {
 }
 
 .form__submit:hover {
-  border-color: white;
-  background-color: transparent;
+  border-color: #f0d149;
+  background-color: #f0d149;
 }
 
 .form__submit:active {
-  border-color: #f0d149;
-  color: #f0d149;
+  border-color: #242424;
+  color: #242424;
 }
 
 /* 
@@ -853,7 +859,7 @@ footer {
     transform: none;
     height: auto;
     width: 100%;
-    flex-direction: column-reverse;
+    flex-direction: column;
     border-radius: 0;
   }
 
