--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ nav {
   opacity: 0;
   transition: opacity 300ms, transform 450ms ease;
   color: white;
-  max-width: 550px;
+  max-width: 700px;
 }
 
 .project__wrapper:hover .project__wrapper--bg {
@@ -719,6 +719,12 @@ nav {
   font-size: 24px;
   margin-right: 16px;
   transition: all 300ms ease;
+}
+
+.mediconnect-link {
+  color: rgb(245, 245, 245);
+  font-size: 16px;
+  margin: 0;
 }
 
 .project__description--link:hover {
@@ -868,6 +874,14 @@ footer {
     width: 100%;
   }
 
+  .project__description--para {
+    display: none;
+  }
+
+  .project__description--links {
+    margin-top: 24px;
+  }
+
   .project__description {
     left: 0;
     padding: 0;
@@ -946,10 +960,6 @@ footer {
   .section__title {
     font-size: 36px;
     margin-top: 60px;
-  }
-
-  .project__description--para {
-    display: none;
   }
 
   .project__description {
